mingled-patches-blend-at-seams: the band discard drew every type as the contour ribbons of one folded xz noise, streaked straight down the vat sides (idea vat-mingling-reads-as-bands). Each type band now answers its layer, largest first, and its conditional share, its volume over the volume of itself and every larger type; UV2 carries share and layer. goo_fluid_surface.fsh draws layer 0 whole and every later layer at smoothstep(q - 0.08, q + 0.08, field) of its own layer-seeded two-octave 3D value noise of world xyz and GameTime, q the field's quantile at 1 - share, drifting on closed loops in all three axes. Over-blending in layer order telescopes each type's expected coverage to its volume ratio, and seams crossfade. Each layer's geometry sits TypeBand.LAYER_LIFT (1/512 block) outward of the layer below, so distance sorting draws the layers in order and depth never ties; the vat and crucible take it alike. The quantile table was measured with numpy on four million uniform samples of a port of mingleField (same uint32 hash, trilinear smoothstep, p * 2.03 + 17 octave) over [-5000, 5000]^3; with that table and the 0.08 seam, mean opacity measured 0.056, 0.107, 0.256, 0.500, 0.744, 0.893 for shares 0.05, 0.1, 0.25, 0.5, 0.75, 0.9 (decision noise-mingled-type-textures)